--- a/floydhub.yml
+++ b/floydhub.yml
@@ -2,4 +2,4 @@ env: tensorflow-1.7
 machine: cpu
 data:
   - source: floydhub/datasets/wine-reviews/1
-    target: winereviews
+    destination: winereviews
